--- a/functions/package.json
+++ b/functions/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch",
+    "build": "rm -f *.zip && zip -qr zg6.zip . && aws lambda update-function-code --function-name zg6 --zip-file fileb://zg6.zip"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jsdom": "^16.4.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
