--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,9 @@
 {
   "name": "functions",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
     "build": "rm -f *.zip && zip -qr zg6.zip . && aws lambda update-function-code --function-name zg6 --zip-file fileb://zg6.zip"
   },
   "keywords": [],
@@ -13,7 +12,5 @@
   "dependencies": {
     "jsdom": "^16.4.0"
   },
-  "devDependencies": {
-    "jest": "^26.6.3"
-  }
+  "devDependencies": {}
 }
